Fix math to display flex correctly
Trying to round numbers made grid width in flex go over 100%, causing
spill of the wrap items. Solution was letting JavaScript handle
the calculation without rounding.

--- a/style.css
+++ b/style.css
@@ -22,15 +22,16 @@ body {
     border-radius: 25px;
     background-color: #EA3546;
     margin: auto;
+    padding-left: 30px;
+    padding-right: 30px;
     width: 960px;
-    height: 960px;
 }
 
 #container { 
     display: flex;
+    width: 900px;
     flex-wrap: wrap;
     background-color: #EFE9F4;
     margin-top: 20px;
-    width: 900px;
-    height: 900px;
+    margin-bottom: 40px;
 }
